@@ -1,3 +1,9 @@
+2008-08-19  David P Grove  <groved@us.ibm.com>
+
+	* scripts/check_jni_methods.sh.in:
+	Fix build issue on AIX by splitting generation
+	of method list.
+	
 2008-08-18  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* native/jni/gstreamer-peer/gst_native_pipeline.c:
